dist/LineScript-win64-20260616/tests/cases/compile_fail/ambiguous_entry.lsc
alpha() -> void do
  return
end

beta() -> void do
  return
end
